// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-collapsible css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="Collapsible"
>
  <button
    aria-busy="false"
    aria-controls="collapsible"
    aria-expanded="false"
    class="wp-components-flex wp-components-base-button wp-components-button wp-components-collapsible-trigger css-dxbs38"
    data-destructive="false"
    data-g2-c16t="true"
    data-g2-component="CollapsibleTrigger"
    data-icon="false"
    type="button"
  >
    <span
      class="wp-components-flex-item css-19mrak6"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show/Hide
    </span>
    <span
      class="wp-components-elevation css-17x6dun"
      data-g2-c16t="true"
      data-g2-component="ButtonElevation"
    />
  </button>
  <div
    class="wp-components-collapsible-content css-li0a7z"
    data-g2-c16t="true"
    data-g2-component="CollapsibleContent"
    hidden=""
    id="collapsible"
    style="display: none;"
  >
    <div
      class="wp-components-animated css-1qs21wj"
      data-g2-c16t="true"
      data-g2-component="CollapsibleInnerContent"
      style="height: 0px; opacity: 0; display: none;"
    >
      Some people are worth melting for.
    </div>
  </div>
</div>
`;

exports[`props should render visible 1`] = `
<div
  class="wp-components-collapsible css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="Collapsible"
>
  <button
    aria-busy="false"
    aria-controls="collapsible"
    aria-expanded="true"
    class="wp-components-flex wp-components-base-button wp-components-button wp-components-collapsible-trigger css-dxbs38"
    data-destructive="false"
    data-g2-c16t="true"
    data-g2-component="CollapsibleTrigger"
    data-icon="false"
    type="button"
  >
    <span
      class="wp-components-flex-item css-19mrak6"
      data-g2-c16t="true"
      data-g2-component="ButtonContent"
    >
      Show/Hide
    </span>
    <span
      class="wp-components-elevation css-17x6dun"
      data-g2-c16t="true"
      data-g2-component="ButtonElevation"
    />
  </button>
  <div
    class="wp-components-collapsible-content css-li0a7z"
    data-g2-c16t="true"
    data-g2-component="CollapsibleContent"
    id="collapsible"
  >
    <div
      class="wp-components-animated css-1qs21wj"
      data-g2-c16t="true"
      data-g2-component="CollapsibleInnerContent"
      style="height: auto; opacity: 1; display: block;"
    >
      Some people are worth melting for.
    </div>
  </div>
</div>
`;
